--- a/package.json
+++ b/package.json
@@ -9,6 +9,10 @@
     "deploy": "git subtree push — prefix dist heroku master"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.26",
+    "@fortawesome/free-regular-svg-icons": "^5.12.0",
+    "@fortawesome/free-solid-svg-icons": "^5.12.0",
+    "@fortawesome/vue-fontawesome": "^0.1.9",
     "aos": "^3.0.0-beta.6",
     "core-js": "^3.3.2",
     "vue": "^2.6.10",
